--- a/ch12activity1.html
+++ b/ch12activity1.html
@@ -5,7 +5,7 @@
 	<head>
 	<title>Ch12 Activity 1</title>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-	
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 
 
 <style>
@@ -29,7 +29,15 @@ p {
 }
 
 footer {font-size: .75em;}
-
+/* Style rule for screens larger than 480 pixels */
+@media screen and (min-width: 30em) /* 480 px */ {
+	body{
+		font-size: 1.5em
+	}
+	h1 {
+		font-size: 2.5em
+	}
+	}
 
 </style>
 
