--- a/ch12activity2.html
+++ b/ch12activity2.html
@@ -7,6 +7,7 @@
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <link href="main.css" rel="stylesheet">
+<link href="responive.css" rel="stylesheet" media="screen and (max-width: 960px) ">	
 
 
 
